# libgdiplus

./: .gitignore  CMakeLists.txt  README.md  config.h.in
fuzzers/: CMakeLists.txt  fuzzimage.cpp  fuzzregion.cpp
src/: CMakeLists.txt  graphics-cairo.c  region-private.h  region.c
tests/: CMakeLists.txt  testbmpcodec.c  testemfcodec.c  testgifcodec.c  testgraphicspath.c  testhelpers.h  testicocodec.c  testjpegcodec.c  testpngcodec.c  testtext.c  testtiffcodec.c  testwmfcodec.c
